--- a/packages/material/scss/listview/_variables.scss
+++ b/packages/material/scss/listview/_variables.scss
@@ -1,25 +1,64 @@
-// Listview
+// ListView
+
+/// The horizontal padding of the ListView.
+/// @group listview
 $kendo-listview-padding-x: k-map-get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the ListView.
+/// @group listview
 $kendo-listview-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+/// The width of the border around bordered ListView.
+/// @group listview
 $kendo-listview-border-width: 1px !default;
+/// The font family of the ListView.
+/// @group listview
 $kendo-listview-font-family: $kendo-font-family !default;
+/// The font size of the ListView.
+/// @group listview
 $kendo-listview-font-size: $kendo-font-size-md !default;
+/// The line height of the ListView.
+/// @group listview
 $kendo-listview-line-height: $kendo-line-height-md !default;
 
-$kendo-listview-bg: $kendo-component-bg !default;
+/// The text color of the ListView.
+/// @group listview
 $kendo-listview-text: $kendo-component-text !default;
+/// The background color of the ListView.
+/// @group listview
+$kendo-listview-bg: $kendo-component-bg !default;
+/// The border color of the ListView.
+/// @group listview
 $kendo-listview-border: $kendo-component-border !default;
 
+/// The gap between items of ListView with grid layout.
+/// @group listview
 $kendo-listview-grid-gap: 10px !default;
 
+/// The horizontal padding of the ListView items.
+/// @group listview
 $kendo-listview-item-padding-x: k-map-get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the ListView items.
+/// @group listview
 $kendo-listview-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
 
-$kendo-listview-item-selected-bg: rgba( k-contrast-color( $kendo-listview-bg ), .04 ) !default;
+/// The text color of the selected ListView items.
+/// @group listview
 $kendo-listview-item-selected-text: null !default;
+/// The background color of the selected ListView items.
+/// @group listview
+$kendo-listview-item-selected-bg: rgba( k-contrast-color( $kendo-listview-bg ), .04 ) !default;
+/// The border color of the selected ListView items.
+/// @group listview
 $kendo-listview-item-selected-border: null !default;
 
-$kendo-listview-item-focus-bg: rgba( k-contrast-color( $kendo-listview-bg ), .08 ) !default;
+/// The text color of the focused ListView items.
+/// @group listview
 $kendo-listview-item-focus-text: null !default;
+/// The background color of the focused ListView items.
+/// @group listview
+$kendo-listview-item-focus-bg: rgba( k-contrast-color( $kendo-listview-bg ), .08 ) !default;
+/// The border color of the focused ListView items.
+/// @group listview
 $kendo-listview-item-focus-border: null !default;
+/// The box shadow of the focused ListView items.
+/// @group listview
 $kendo-listview-item-focus-shadow: null !default;
