--- a/packages/fluent/scss/listbox/_variables.scss
+++ b/packages/fluent/scss/listbox/_variables.scss
@@ -1,45 +1,44 @@
 @use "sass:map";
 @use "../core/" as *;
 
-/// Margin between the listbox elements.
+/// The spacing between the ListBox elements.
 /// @group listbox
 $kendo-listbox-spacing: map.get( $kendo-spacing, 2 ) !default;
-/// Margin between the listbox buttons.
+/// The spacing between the ListBox buttons.
 /// @group listbox
 $kendo-listbox-button-spacing: map.get( $kendo-spacing, 2 ) !default;
-/// Width of the listbox.
+/// WThe width of the ListBox.
 /// @group listbox
 $kendo-listbox-width: 10em !default;
-/// Height of the listbox.
+/// The height of the ListBox.
 /// @group listbox
 $kendo-listbox-height: 200px !default;
-
-/// Border width of the listbox.
+/// The width of the border around the ListBox.
 /// @group listbox
 $kendo-listbox-border-width: 1px !default;
-/// Font family of the listbox.
+/// The font family of the ListBox.
 /// @group listbox
 $kendo-listbox-font-family: var( --kendo-font-family, normal ) !default;
-/// Font size of the listbox.
+/// The font size of the ListBox.
 /// @group listbox
 $kendo-listbox-font-size: var( --kendo-font-size, inherit ) !default;
-/// Line height of the listbox.
+/// The line height of the ListBox.
 /// @group listbox
 $kendo-listbox-line-height: var( --kendo-line-height, normal ) !default;
 
-/// Background color of the listbox component.
-/// @group listbox
-$kendo-listbox-bg: var( --kendo-component-bg, transparent ) !default;
-/// Text color of the listbox component.
+/// The text color of the ListBox.
 /// @group listbox
 $kendo-listbox-text: var( --kendo-component-text, inherit ) !default;
-/// Border color of the listbox component.
+/// The background color of the ListBox.
+/// @group listbox
+$kendo-listbox-bg: var( --kendo-component-bg, transparent ) !default;
+/// The border color of the ListBox.
 /// @group listbox
 $kendo-listbox-border: var( --kendo-component-border, inherit ) !default;
 
-/// Width of the drop hint.
+/// The width of the ListBox drop hint.
 /// @group listbox
 $kendo-listbox-drop-hint-width: 1px !default;
-/// Border color of the drop hint.
+/// The border color of the ListBox drop hint.
 /// @group listbox
 $kendo-listbox-drop-hint-border-color: get-theme-color-var( primary-100 ) !default;
