--- a/packages/fluent/scss/filter/_variables.scss
+++ b/packages/fluent/scss/filter/_variables.scss
@@ -1,38 +1,38 @@
 @use "../core/" as *;
 
-/// Horizontal padding of the filter.
+/// The horizontal padding of the Filter.
 /// @group filter
 $kendo-filter-padding-x: $kendo-padding-md-x !default;
-/// Vertical padding of the filter.
+/// The vertical padding of the Filter.
 /// @group filter
 $kendo-filter-padding-y: $kendo-padding-md-y !default;
 
-/// Bottom margin of the filter.
+/// The bottom margin of the Filter.
 /// @group filter
 $kendo-filter-bottom-margin: 30px !default;
-/// Width of the line that connects the filter items.
+/// The width of the line that connects the Filter items.
 /// @group filter
 $kendo-filter-line-size: 1px !default;
 
-/// Width of the dropdown elements in the filter items.
+/// The width of the dropdown elements in the Filter items.
 /// @group filter
 $kendo-filter-operator-dropdown-width: 15em !default;
 
-/// Text color of the preview field.
-/// @group filter
-$kendo-filter-preview-field-text: get-theme-color-var( primary-100 ) !default;
-/// Text color of the preview operator.
-/// @group filter
-$kendo-filter-preview-operator-text: get-theme-color-var( neutral-130 ) !default;
-
-/// Text color of the filter.
+/// The text color of the Filter.
 /// @group filter
 $kendo-filter-text: var( --kendo-component-text, initial ) !default;
 
-/// Background color of the line that connects the filter items.
+/// The text color of the Filter preview field.
+/// @group filter
+$kendo-filter-preview-field-text: get-theme-color-var( primary-100 ) !default;
+/// The text color of the Filter preview operator.
+/// @group filter
+$kendo-filter-preview-operator-text: get-theme-color-var( neutral-130 ) !default;
+
+/// The background color of the line that connects the Filter items.
 /// @group filter
 $kendo-filter-line-bg: var( --kendo-component-border, initial ) !default;
 
-/// Border color of the focused filter.
+/// The border color of the focused Filter.
 /// @group filter
 $kendo-filter-toolbar-focus-border: get-theme-color-var( neutral-130 ) !default;
